--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-asyncio~=3.4.3
-matplotlib
 python-binance==1.0.16
 python-dotenv~=1.0.1
 python-telegram-bot==20.1
 requests==2.28.1
+cryptography
 streamlit
+matplotlib
